--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Typed.js - Type your heart out</title>
+    <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
             stringsElement: $('#typed-strings'),
             typeSpeed: 30,
             backDelay: 500,
-            loop: false,
+            loop: true,
             contentType: 'html', // or text
             // defaults to false for infinite loop
             loopCount: false,
@@ -34,6 +34,7 @@
 
     </script>
     <link href="main.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
     <style>
         /* code for animated blinking cursor */
         .typed-cursor{
@@ -75,11 +76,11 @@
 <body>
 
     <div class="wrap">
-        <h1 class="h1">Typed.js</h1>
+        <!-- <h1 class="h1">Typed.js</h1> -->
 
         <div class="type-wrap">
             <div id="typed-strings">
-                <span>Typed.js is a <strong>jQuery</strong> plugin.</span>
+                <span>Typed.js is a <strong>jQuery</strong> plugin.</span> 
                 <p>It <em>types</em> out sentences.</p>
                 <p>And then deletes them.</p>
                 <p>Try it out!</p>
@@ -88,7 +89,7 @@
         </div>
 
         <div class="links">
-            <a href="http://www.mattboldt.com/demos/typed-js">View original demo</a> | <a href="http://www.mattboldt.com">View mattboldt.com</a> | <a href="http://www.twitter.com/atmattb">Complain to Matt about how awful this is</a>
+            <a href="#">Things I Made</a> | <a href="#">Download Resume</a> | <a href="http://www.github.com/mroble">My GitHub Profile</a> | <a href="http://www.twitter.com/MaureenRoble">Tweet at me!</a>
         </div>
     </div>
 
