--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="links">
-            <a href="#">Things I Made</a> | <a href="#">Download Resume</a> | <a href="http://www.github.com/mroble">My GitHub Profile</a> | <a href="http://www.twitter.com/MaureenRoble">Tweet at me!</a>
+            <a href="#">Things I Made</a> | <a href="#">Download Resume</a> | <a href="http://www.github.com/mroble">My GitHub Profile</a> | <a href="#">Send me an E-mail</a> | <a href="http://www.twitter.com/MaureenRoble">Tweet at me!</a>
         </div>
     </div>
 
