Add changes to css and index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
             stringsElement: $('#typed-strings'),
             typeSpeed: 30,
-            backDelay: 500,
+            backDelay: 1700,
             loop: true,
             contentType: 'html', // or text
             // defaults to false for infinite loop
@@ -35,61 +35,25 @@
     </script>
     <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
-    <style>
-        /* code for animated blinking cursor */
-        .typed-cursor{
-            opacity: 1;
-            font-weight: 100;
-            -webkit-animation: blink 0.7s infinite;
-            -moz-animation: blink 0.7s infinite;
-            -ms-animation: blink 0.7s infinite;
-            -o-animation: blink 0.7s infinite;
-            animation: blink 0.7s infinite;
-        }
-        @-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-webkit-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-moz-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-ms-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-o-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-    </style>
+    
 </head>
 <body>
 
     <div class="wrap">
-        <!-- <h1 class="h1">Typed.js</h1> -->
+         <!--<h1 class="h1">Welcome.</h1>-->
 
         <div class="type-wrap">
             <div id="typed-strings">
-                <span>Typed.js is a <strong>jQuery</strong> plugin.</span> 
-                <p>It <em>types</em> out sentences.</p>
-                <p>And then deletes them.</p>
-                <p>Try it out!</p>
+                <span>Hi! My name's Maureen!</span> 
+                <p>I make games.</p>
+                <p>So you don't have to.</p>
+                <p>Enjoy your stay!</p>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
         <div class="links">
-            <a href="#">Things I Made</a> | <a href="#">Download Resume</a> | <a href="http://www.github.com/mroble">My GitHub Profile</a> | <a href="#">Send me an E-mail</a> | <a href="http://www.twitter.com/MaureenRoble">Tweet at me!</a>
+            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
         </div>
     </div>
 
