--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/typed.js" type="text/javascript"></script>
+    <script src="dist/typed.min.js" type="text/javascript"></script>
     <script>
     $(function(){
 
