--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
     <script>
     $(function(){
