--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
-    <script src="jquery.min.js"></script>
+    <script src="js/jquery-3.1.0.js"></script>
     <script src="dist/typed.min.js" type="text/javascript"></script>
     <script>
     $(function(){
