--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.js"></script>
-    <script src="dist/typed.min.js" type="text/javascript"></script>
+    <script src="js/typed.js" type="text/javascript"></script>
     <script>
     $(function(){
 
