--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
     <div class="wrap">
          <!--<h1 class="h1">Welcome.</h1>-->
+         <div class="banner">
+         <p>                                                  __         _      _       
+  /\/\    __ _  _   _  _ __  ___   ___  _ __     /__\  ___  | |__  | |  ___ 
+ /    \  / _` || | | || '__|/ _ \ / _ \| '_ \   / \// / _ \ | '_ \ | | / _ \
+/ /\/\ \| (_| || |_| || |  |  __/|  __/| | | | / _  \| (_) || |_) || ||  __/
+\/    \/ \__,_| \__,_||_|   \___| \___||_| |_| \/ \_/ \___/ |_.__/ |_| \___|
+                                                                            </p>
+         </div>
 
         <div class="type-wrap">
             <div id="typed-strings">
