Add name banner

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <body>
 
     <div class="wrap">
+
+        <div id="banner">
+        <img src="images/myname.png" alt="name banner">
+        </div>
          <!--<h1 class="h1">Welcome.</h1>-->
 
         <div class="type-wrap">
