Remove image file

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <div class="wrap">
 
-        <div id="banner">
+        <!--<div id="banner">
         <img src="images/myname.png" alt="name banner">
         </div>
-         <!--<h1 class="h1">Welcome.</h1>-->
+         <h1 class="h1">Welcome.</h1>-->
 
         <div class="type-wrap">
             <div id="typed-strings">
