--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
     <div class="wrap">
-         <!--<h1 class="h1">Welcome.</h1>-->
+         <!--<h1 class="h1">Welcome.
          <div class="banner">
          <p>                                                  __         _      _       
   /\/\    __ _  _   _  _ __  ___   ___  _ __     /__\  ___  | |__  | |  ___ 
@@ -48,7 +48,7 @@
 / /\/\ \| (_| || |_| || |  |  __/|  __/| | | | / _  \| (_) || |_) || ||  __/
 \/    \/ \__,_| \__,_||_|   \___| \___||_| |_| \/ \_/ \___/ |_.__/ |_| \___|
                                                                             </p>
-         </div>
+         </div> -->
 
         <div class="type-wrap">
             <div id="typed-strings">
