--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                 <p>So you don't have to.</p>
                 <p>Enjoy your stay!</p>
             </div>
+
+                <div id="typed-strings">
+                <span>Links</span> 
+                p><a href="#">Things I Made</a> </p>
+                </div>
+
+
+
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
