--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         </div>
 
         <div class="links">
-            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
+            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
+            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
         </div>
     </div>
 
