--- a/sayhello.html
+++ b/sayhello.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maureen Roble's Portfolio</title>
+    <title>Say Hello!</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
             stringsElement: $('#typed-strings'),
             typeSpeed: 30,
             backDelay: 1800,
-            loop: true,
+            loop: false,
             contentType: 'html', // or text
             // defaults to false for infinite loop
             loopCount: false,
@@ -34,35 +34,34 @@
 
     </script>
     <link href="main.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
     
 </head>
+
 <body>
 
-    <div class="wrap">
 
-        <!--<div id="banner">
-        <img src="images/myname.png" alt="name banner">
-        </div>
-         <h1 class="h1">Welcome.</h1>-->
+        <div class="wrap">
 
-        <div class="type-wrap">
+ <div class="type-wrap">
             <div id="typed-strings">
-                <span>Hi! My name's Maureen!</span> 
-                <p>I make games.</p>
-                <p>So you don't have to.</p>
-                <p>Enjoy your stay!</p>
+                <span>Say hello!</span> 
             </div>
 
 
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-        <div class="links">
-            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
-        </div>
-    </div>
+<form method="POST" action="http://formspree.io/moroble@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+</form>
 
+     <div class="links">
+            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
+            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
+        </div>
+        </div>
 </body>
 </html>
