Fixed typo in form

--- a/sayhello.html
+++ b/sayhello.html
@@ -52,7 +52,7 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-<form method="POST" action="http://formspree.io/moroble@gmail.com">
+<form method="POST" action="https://formspree.io/moroble@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Your message"></textarea>
   <button type="submit">Send</button>
