--- a/sayhello.html
+++ b/sayhello.html
@@ -52,10 +52,11 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-<form method="POST" action="https://formspree.io/moroble@gmail.com">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+<form action="https://formspree.io/moroble@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
 </form>
 
      <div class="links">
