--- a/sayhello.html
+++ b/sayhello.html
@@ -52,12 +52,16 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-<form action="https://formspree.io/moroble@gmail.com"
-      method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
-</form>
+    <div class="form">
+    <form accept-charset="UTF-8" action="https://formkeep.com/f/7e81215a0407" method="POST">
+         <input type="hidden" name="utf8" value="✓">
+
+         <input type="email" name="email" placeholder="Your email">
+         <textarea name="message" placeholder="Your message"></textarea>
+        <button type="submit">Send</button>
+    </form>
+    </div>
+
 
      <div class="links">
             <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
