add portfolio page and update links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="links">
-            <a href="#">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
             <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
         </div>
     </div>
