--- a/sayhello.html
+++ b/sayhello.html
@@ -64,7 +64,7 @@
 
 
      <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="#">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
             <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
         </div>
         </div>
