--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Maureen Roble's Portfolio</title>
     <!-- Get jQuery -->
+    <!-- This kick-butt jQuery animation is courtesy of mattboldt. It's called typed.js, and you can get it at https://github.com/mattboldt/typed.js/ -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
     <script>
