--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Things I Made</title>
+    <title>Games</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -48,7 +48,7 @@
 
         <div class="type-wrap">
             <div id="typed-strings">
-                <span>Things I Made</span> 
+                <span>Games</span> 
                 <!--<p>Unity3d</p>
                 <p>VR</p>
                 <p>Apps</p>-->
