--- a/thingsimade.html
+++ b/thingsimade.html
@@ -14,7 +14,7 @@
             stringsElement: $('#typed-strings'),
             typeSpeed: 30,
             backDelay: 1800,
-            loop: false,
+            loop: true,
             contentType: 'html', // or text
             // defaults to false for infinite loop
             loopCount: false,
@@ -49,9 +49,9 @@
         <div class="type-wrap">
             <div id="typed-strings">
                 <span>Things I Made</span> 
-                <!--<p>Unity3d</p>
+                <p>Unity3d</p>
                 <p>VR</p>
-                <p>Apps</p>-->
+                <p>Apps</p>
             </div>
 
 
