--- a/thingsimade.html
+++ b/thingsimade.html
@@ -35,6 +35,9 @@
     </script>
     <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     
 </head>
 <body>
@@ -62,6 +65,15 @@
         <a href="games.html">// Games</a> | <a href="vr.html">VR</a> | <a href="sites.html">Web Sites //</a>
             
         </div>
+
+        <div class = "row">
+   
+   <div class = "col-sm-6 col-md-3">
+      <a href = "#" class = "thumbnail">
+         <img src = "/images/melo.jpg" alt = "melo thumbnail">
+      </a>
+   </div>
+   </div>
 
 
         <div class="links">
