--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     function foo(){ console.log("Callback"); }
 
     </script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     
