--- a/thingsimade.html
+++ b/thingsimade.html
@@ -71,7 +71,7 @@
    
    <div class = "col-sm-6 col-md-3">
       <a href = "#" class = "thumbnail">
-         <img src = "/images/melo.jpg" alt = "melo thumbnail">
+         <img src="images/melo.jpg" alt = "melo thumbnail">
       </a>
    </div>
    </div>
