--- a/thingsimade.html
+++ b/thingsimade.html
@@ -69,11 +69,20 @@
 
         <div class = "row">
    
-   <div class = "col-sm-6 col-md-3">
-      <a href = "#" class = "thumbnail">
-         <img src="images/melo.jpg" alt = "melo thumbnail">
-      </a>
-   </div>
+   		<div class = "col-sm-6 col-md-3">
+      		<a href = "#" class = "thumbnail">
+         		<img src="images/melo.jpg" alt = "melo thumbnail">
+      		</a>
+   		</div>
+
+   		<div class = "col-sm-6 col-md-3">
+      		<a href = "#" class = "thumbnail">
+         		<img src="images/portfolio.jpg" alt = "portfolio thumbnail">
+      		</a>
+  		 </div>
+
+
+
    </div>
 
 
