--- a/thingsimade.html
+++ b/thingsimade.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="links">
-        <a href="games.html">// Games</a> | <a href="vr.html">VR</a> | <a href="sites.html">Web Sites //</a>
+        // <a href="games.html">Games</a> | <a href="vr.html">VR</a> | <a href="sites.html">Web Sites</a> //
             
         </div>
 
