--- a/thingsimade.html
+++ b/thingsimade.html
@@ -53,7 +53,7 @@
         <div class="type-wrap">
             <div id="typed-strings">
                 <span>Things I Made</span> 
-                <p>Unity3d</p>
+                <p>Unity3d Games</p>
                 <p>VR</p>
                 <p>Apps</p>
             </div>
@@ -62,28 +62,25 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-        <div class="links">
-        // <a href="games.html">Games</a> | <a href="vr.html">VR</a> | <a href="sites.html">Web Sites</a> //
-            
-        </div>
 
         <div class = "row">
    
-   		<div class = "col-sm-6 col-md-3">
-      		<a href = "#" class = "thumbnail">
-         		<img src="images/melo.jpg" alt = "melo thumbnail">
-      		</a>
-   		</div>
+   			<div class = "col-sm-6 col-md-3">
+      			<a href = "#" class = "thumbnail">
+         			<img src="images/melo.jpg" alt = "melo thumbnail">
+      			</a>
+   			</div>
 
-   		<div class = "col-sm-6 col-md-3">
-      		<a href = "#" class = "thumbnail">
-         		<img src="images/portfolio.jpg" alt = "portfolio thumbnail">
-      		</a>
-  		 </div>
+   			<div class = "col-sm-6 col-md-3">
+      			<a href = "#" class = "thumbnail">
+         			<img src="images/portfolio.jpg" alt = "portfolio thumbnail">
+      			</a>
+  		 	</div>
+
+  		</div>
 
 
-
-   </div>
+   
 
 
         <div class="links">
