Add text and space for rollerball

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -55,7 +55,7 @@
                 <span>Things I Made</span> 
                 <p>Unity3d Games</p>
                 <p>VR</p>
-                <p>Apps</p>
+                <p>Web Sites</p>
             </div>
 
 
@@ -70,6 +70,13 @@
          			<img src="images/melo.jpg" alt = "melo thumbnail">
       			</a>
    			</div>
+
+   			<div class = "col-sm-6 col-md-3">
+      			<a href = "#" class = "thumbnail">
+         			<img src="images/rollerball.jpg" alt = "rollerball thumbnail">
+      			</a>
+   			</div>
+
 
    			<div class = "col-sm-6 col-md-3">
       			<a href = "#" class = "thumbnail">
