--- a/thingsimade.html
+++ b/thingsimade.html
@@ -6,6 +6,7 @@
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
+
      <script>
     $(function(){
 
@@ -34,8 +35,8 @@
 
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <link href="main.css" rel="stylesheet"/>
+    <link href="lightbox.css" rel="stylesheet">
+	<link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 	
@@ -95,6 +96,6 @@
             <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
         </div>
     </div>
-
+    <script src="js/lightbox.js"></script>
 </body>
 </html>
