Add first of lightbox

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -68,7 +68,7 @@
    
    			<div class = "col-sm-6 col-md-3">
       			<a href = "#" class = "thumbnail">
-         			<img src="images/melo.jpg" alt = "melo thumbnail">
+         			<a href="images/melo.jpg" data-lightbox="melo" data-title="A screenshot of my 2D Platformer Melo the Umang Boy for <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>. Click <a href="https://mroble.github.io/melotheumangboy">here</a> to play the game." alt = "melo thumbnail">
       			</a>
    			</div>
 
