--- a/thingsimade.html
+++ b/thingsimade.html
@@ -67,9 +67,9 @@
         <div class = "row">
    
    			<div class = "col-sm-6 col-md-3">
-      			<a href = "#" class = "thumbnail">
-         			<a href="images/melo.jpg" data-lightbox="melo" data-title="A screenshot of my 2D Platformer Melo the Umang Boy for <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>. Click <a href="https://mroble.github.io/melotheumangboy">here</a> to play the game." alt = "melo thumbnail">
-      			</a>
+
+         			<a class="portfolio-images" href="images/melo.jpg" class ="thumbnail" data-lightbox="melo" data-title="A screenshot of my 2D Platformer Melo the Umang Boy for Sari-Sari Storybooks"> <img class="example-image" src= images/bigmelo.jpg" alt="bigmelo"/></a>
+      		
    			</div>
 
    			<div class = "col-sm-6 col-md-3">
