--- a/thingsimade.html
+++ b/thingsimade.html
@@ -68,7 +68,7 @@
    
    			<div class = "col-sm-6 col-md-3">
 
-         			<a class="portfolio-images" href="images/bigmelo.jpg" class ="thumbnail" data-lightbox="melo" data-title="A screenshot of my 2D Platformer Melo the Umang Boy for Sari-Sari Storybooks"> <img class="example-image" src= images/melo.jpg" alt="bigmelo"/></a>
+         			<a class="portfolio-images" href="images/bigmelo.jpg" class ="thumbnail" data-lightbox="melo" data-title="My 2D Platformer Melo the Umang Boy for Sari-Sari Storybooks. Click <a href="https://mroble.github.io/melotheumangboy">here</a> to play the game."> <img class="example-image" src= images/melo.jpg" alt="melo"/></a>
       		
    			</div>
 
