--- a/thingsimade.html
+++ b/thingsimade.html
@@ -35,7 +35,6 @@
 
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="lightbox.css" rel="stylesheet">
 	<link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
@@ -67,20 +66,21 @@
         <div class = "row">
    
    			<div class = "col-sm-6 col-md-3">
-
-         			<a class="portfolio-images" href="images/bigmelo.jpg" class ="thumbnail" data-lightbox="melo" data-title="My 2D Platformer Melo the Umang Boy for Sari-Sari Storybooks. Click <a href="https://mroble.github.io/melotheumangboy">here</a> to play the game."> <img class="example-image" src= images/melo.jpg" alt="melo"/></a>
-      		
+   				<a href = "melo.html" class = "thumbnail">
+         			<img src="images/melo.jpg" alt = "melo thumbnail">
+      			</a>
+         			
    			</div>
 
    			<div class = "col-sm-6 col-md-3">
-      			<a href = "#" class = "thumbnail">
+      			<a href = "rollerball.html" class = "thumbnail">
          			<img src="images/rollerball.jpg" alt = "rollerball thumbnail">
       			</a>
    			</div>
 
 
    			<div class = "col-sm-6 col-md-3">
-      			<a href = "#" class = "thumbnail">
+      			<a href = "portfolio.html" class = "thumbnail">
          			<img src="images/portfolio.jpg" alt = "portfolio thumbnail">
       			</a>
   		 	</div>
@@ -96,6 +96,6 @@
             <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
         </div>
     </div>
-    <script src="js/lightbox.js"></script>
+   
 </body>
 </html>
