--- a/basketball.html
+++ b/basketball.html
@@ -1,4 +1,4 @@
- <title>Rollerball 3D Video Game</title>
+ <title>VR Basktball Video Game</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -42,20 +42,21 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Rollerball</span>
+                <span>VR Basketball</span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
 <h5>Description</h5>
-<p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="#">Coursera.</a>
+<p>VR Basketball came about through a desire to explore VR gaming.  In this game, one must shoot multiple basketballs into the hoops, with the furthest hoops garnering the most points. This was the first game I made that was Oculus Rift-compatible, and was made with the help of the <i>Make Virtual Reality Games in Unity</i> course on <a href="#">Udemy.</a>
+   
 </p>
 
 <h5>Technologies Used</h5>
-<p>Unity3d, C#, GitHub</p>
+<p>Unity3d(v 5.4.1f), C#, GitHub</p>
 
 <h5>Date Made</h5>
-<p>Summer 2016</p>
+<p>October 2016</p>
 
 <a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a>
 
