--- a/codeguts.html
+++ b/codeguts.html
@@ -1,4 +1,4 @@
- <title>Rollerball 3D Video Game</title>
+ <title>Codeguts Learn to Code App</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -42,22 +42,23 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Rollerball</span>
+                <span>Codeguts: A Learn to Code App</span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
 <h5>Description</h5>
-<p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="#">Coursera.</a>
+<p>
 </p>
 
 <h5>Technologies Used</h5>
-<p>Unity3d, C#, GitHub</p>
+<p>Node.js, HTML5, CSS3, JavaScript, Sublime Text, GitHub</p>
 
 <h5>Date Made</h5>
-<p>Summer 2016</p>
+<p>In-progress, tentative release November 2016</p>
 
-<a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a>
+
+<a href="#">Visit Site</a> | <a href="#">Source Code on GitHub</a>
 
 
 
