--- a/tennis.html
+++ b/tennis.html
@@ -1,4 +1,4 @@
- <title>Rollerball 3D Video Game</title>
+ <title>JavaScript Tennis Video Game</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -42,20 +42,21 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Rollerball</span>
+                <span>Javascript Tennis</span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
 <h5>Description</h5>
-<p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="#">Coursera.</a>
+<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with just JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="#">Udemy</a>.
+   
 </p>
 
 <h5>Technologies Used</h5>
-<p>Unity3d, C#, GitHub</p>
+<p>HTML5, Canvas, JavaScript, Sublime Text, GitHub</p>
 
 <h5>Date Made</h5>
-<p>Summer 2016</p>
+<p>October 2016</p>
 
 <a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a>
 
