--- a/thingsimade.html
+++ b/thingsimade.html
@@ -35,7 +35,7 @@
 
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="main.css" rel="stylesheet"/>
+	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 	
@@ -62,6 +62,9 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+        <div class="links">
+        // <a href="#">2D</a> | <a href="#">3D</a> | <a href="#">VR</a> | <a href="#">Web Sites</a> //   
+        </div>
 
         <div class = "row">
    
@@ -72,11 +75,32 @@
          			
    			</div>
 
+         <div class = "col-sm-6 col-md-3">
+          <a href = "tennis.html" class = "thumbnail">
+              <img src="images/tennis.jpg" alt = "tennis game thumbnail">
+            </a>
+              
+        </div>
+
+
    			<div class = "col-sm-6 col-md-3">
       			<a href = "rollerball.html" class = "thumbnail">
          			<img src="images/rollerball.jpg" alt = "rollerball thumbnail">
       			</a>
    			</div>
+
+        <div class = "col-sm-6 col-md-3">
+            <a href = "basketball.html" class = "thumbnail">
+              <img src="images/basketball.jpg" alt = "basketball thumbnail">
+            </a>
+        </div>
+
+
+        <div class = "col-sm-6 col-md-3">
+            <a href = "codeguts.html" class = "thumbnail">
+              <img src="images/codeguts.jpg" alt = "codeguts site thumbnail">
+            </a>
+        </div>
 
 
    			<div class = "col-sm-6 col-md-3">
@@ -86,10 +110,6 @@
   		 	</div>
 
   		</div>
-
-
-   
-
 
         <div class="links">
             <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
