reduce links font size

--- a/melo.html
+++ b/melo.html
@@ -59,7 +59,7 @@
 <h5>Date Made</h5>
 <p>September 2016</p>
 
-<a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a>
+<p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
 
 
 
