Clean up layout changes

--- a/codeguts.html
+++ b/codeguts.html
@@ -47,6 +47,8 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+        <p><a href="#">Visit Site</a> | <a href="#">Source Code on GitHub</a></p>
+
 <h5>Description</h5>
 <p>
 </p>
@@ -57,8 +59,6 @@
 <h5>Date Made</h5>
 <p>In-progress, tentative release November 2016</p>
 
-
-<a href="#">Visit Site</a> | <a href="#">Source Code on GitHub</a>
 
 
 
