--- a/rollerball.html
+++ b/rollerball.html
@@ -47,6 +47,8 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+<p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
+
 <h5>Description</h5>
 <p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="#">Coursera.</a>
 </p>
@@ -56,8 +58,6 @@
 
 <h5>Date Made</h5>
 <p>Summer 2016</p>
-
-<a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a>
 
 
 
