add missing links

--- a/melo.html
+++ b/melo.html
@@ -48,11 +48,15 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+        <div class="big-image">
+        <p><img src="images/largemelo.png" alt="large melo pic"></p>
+        </div>
+
         <p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
-    <i>Melo The Umang Boy</i> is a 2D platformer video game collaboration with the publishing company, Sari-Sari Storybooks.  Sari-sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. While the outward purpose of the game is to reinforce Ivatan vocabulary words covered in the book, the hidden purpose of the game is to help make learning about Filipino culture fun. In order to make the game as accessible to as many children as possible, we made the decision to make this a web game.
+    <i>Melo The Umang Boy</i> is a 2D platformer video game collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. While the outward purpose of the game is to reinforce Ivatan vocabulary words covered in the book, the hidden purpose of the game is to help make learning about Filipino culture fun. In order to make the game as accessible to as many children as possible, we made the decision to make this a web game.
 </p>
 
 <h5>Technologies Used</h5>
@@ -60,8 +64,6 @@
 
 <h5>Date Made</h5>
 <p>September 2016</p>
-
-
 
 
 
