add more missing links

--- a/rollerball.html
+++ b/rollerball.html
@@ -47,6 +47,12 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+             <div class="big-image">
+        <p><img src="images/largeroller.png" alt="large melo pic"></p>
+        </div>
+
+       
+
 <p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
