add description to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
 <h5>Description</h5>
 <p>
-    
+This was my first attempt at making a "modern" (read: post-1999) web-site. It was made by hand with the help of lots of tutorials, too many to name here.    
 </p>
 
 <h5>Technologies Used</h5>
