add portfolio image

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="big-image">
-        <p><img src="images/largemelo.png" alt="large melo pic"></p>
+        <p><img src="images/bigportfolio.png" alt="large portfolio pic"></p>
         </div>
 
         <p><a href="https://mroble.github.io/mroble_portfolio">Visit Site</a> | <a href="http://www.github.com/mroble/mroble_portfolio">Source Code on GitHub</a></p>
