--- a/basketball.html
+++ b/basketball.html
@@ -51,7 +51,7 @@
         <p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>VR Basketball came about through a desire to explore VR gaming.  In this game, one must shoot multiple basketballs into the hoops, with the furthest hoops garnering the most points. This was the first game I made that was Oculus Rift-compatible, and was made with the help of the <i>Make Virtual Reality Games in Unity</i> course on <a href="#">Udemy.</a>
+<p>VR Basketball came about through a desire to explore VR gaming.  In this game, one must shoot multiple basketballs into the hoops, with the furthest hoops garnering the most points. This was the first game I made that was Oculus Rift-compatible, and was made with the help of the <i>Make Virtual Reality Games in Unity</i> course on <a href="https://www.udemy.com/vrcourse/">Udemy.</a>
    
 </p>
 
