--- a/rollerball.html
+++ b/rollerball.html
@@ -56,7 +56,7 @@
 <p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="#">Coursera.</a>
+<p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="https://www.coursera.org/learn/game-development">Coursera.</a>
 </p>
 
 <h5>Technologies Used</h5>
