add changes to rollerball.html

--- a/rollerball.html
+++ b/rollerball.html
@@ -48,12 +48,12 @@
         </div>
 
              <div class="big-image">
-        <p><img src="images/largeroller.png" alt="large melo pic"></p>
+        <p><img src="images/largeroller.png" alt="large rollerball pic"></p>
         </div>
 
        
 
-<p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
+<p><a href="https://mroble.github.io/rollerball/">Play Game</a> | <a href="https://github.com/mroble/rollercode">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="https://www.coursera.org/learn/game-development">Coursera.</a>
