--- a/rollerball.html
+++ b/rollerball.html
@@ -53,7 +53,7 @@
 
        
 
-<p><a href="https://mroble.github.io/rollerball/">Play Game</a> | <a href="https://github.com/mroble/rollercode">Source Code on GitHub</a></p>
+<p><a href="https://mroble.github.io/rollerball">Play Game</a> | <a href="https://github.com/mroble/rollercode">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>Rollerball was the first Unity3d game I ever made, as well as the first 3D game I ever made. This game was part of my coursework for my Introduction to Game Development class at Michigan State University on <a href="https://www.coursera.org/learn/game-development">Coursera.</a>
