Add correct link name

--- a/tennis.html
+++ b/tennis.html
@@ -47,10 +47,10 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-<p><a href="#">Play Game</a> | <a href="#">Source Code on GitHub</a></p>
+<p><a href="https://mroble.github.io/tennis_game/">Play Game</a> | <a href="https://github.com/mroble/tennis_game">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with just JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>.
+<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with "just" JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>. 
    
 </p>
 
