--- a/thingsimade.html
+++ b/thingsimade.html
@@ -62,9 +62,9 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
-        <div class="links">
+       <!--<div class="links">
         // <a href="#">2D</a> | <a href="#">3D</a> | <a href="#">VR</a> | <a href="#">Web Sites</a> //   
-        </div>
+        </div> !-->
 
         <div class = "row">
    
