Add codeguts description

--- a/codeguts.html
+++ b/codeguts.html
@@ -51,6 +51,7 @@
 
 <h5>Description</h5>
 <p>
+Codeguts is a node app where "Friends Help Friends Frankenstein Code."  Through my own journey in learning to code, I noticed that most tutorial sites were focused on teaching best practices and small details (as well they should be!), but these sites easily frustrated me, the beginning coder, who just wanted to get her hands dirty and see what I could make. Codeguts will allow learners to learn to code by taking apart its "guts". 
 </p>
 
 <h5>Technologies Used</h5>
