add tennis thumbnail

--- a/tennis.html
+++ b/tennis.html
@@ -47,6 +47,12 @@
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
+
+        <div class="big-image">
+        <p><img src="images/nicetennis.png" alt="large tennis pic"></p>
+        </div>
+
+
 <p><a href="https://mroble.github.io/tennis_game/">Play Game</a> | <a href="https://github.com/mroble/tennis_game">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
