--- a/thingsimade.html
+++ b/thingsimade.html
@@ -77,7 +77,7 @@
 
          <div class = "col-sm-6 col-md-3">
           <a href = "tennis.html" class = "thumbnail">
-              <img src="images/tennis.jpg" alt = "tennis game thumbnail">
+              <img src="images/nicetennissmall.png" alt = "tennis game thumbnail">
             </a>
               
         </div>
