--- a/thingsimade.html
+++ b/thingsimade.html
@@ -94,8 +94,9 @@
               <img src="images/basketball.jpg" alt = "basketball thumbnail">
             </a>
         </div>
+        </div>
 
-
+    <div class = "row">
         <div class = "col-sm-6 col-md-3">
             <a href = "codeguts.html" class = "thumbnail">
               <img src="images/codeguts.jpg" alt = "codeguts site thumbnail">
