--- a/thingsimade.html
+++ b/thingsimade.html
@@ -96,6 +96,23 @@
         </div>
         </div>
 
+
+      <div class = "row">
+        <div class = "col-sm-6 col-md-3">
+            <a href = "ballmouse.html" class = "ball mouse thumbnail">
+              <img src="images/ballmouse.jpg" alt = "ballmouse game thumbnail">
+            </a>
+        </div>
+
+        <div class = "row">
+        <div class = "col-sm-6 col-md-3">
+            <a href = "racecar.html" class = "thumbnail">
+              <img src="images/racecar.jpg" alt = "racecar site thumbnail">
+            </a>
+        </div>
+
+
+
     <div class = "row">
         <div class = "col-sm-6 col-md-3">
             <a href = "codeguts.html" class = "thumbnail">
