comment out unfinished projects to test format

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -89,12 +89,12 @@
       			</a>
    			</div>
 
-        <div class = "col-sm-6 col-md-3">
+       <!--<div class = "col-sm-6 col-md-3">
             <a href = "basketball.html" class = "thumbnail">
               <img src="images/basketball.jpg" alt = "basketball thumbnail">
             </a>
         </div>
-        </div>
+        </div> -->
 
 
       <div class = "row">
@@ -113,12 +113,12 @@
 
 
 
-    <div class = "row">
+    <!--<div class = "row">
         <div class = "col-sm-6 col-md-3">
             <a href = "codeguts.html" class = "thumbnail">
               <img src="images/codeguts.jpg" alt = "codeguts site thumbnail">
             </a>
-        </div>
+        </div> -->
 
 
    			<div class = "col-sm-6 col-md-3">
