--- a/ballmouse.html
+++ b/ballmouse.html
@@ -1,4 +1,4 @@
- <title>JavaScript Breaking Bricks Video Game</title>
+ <title>JavaScript Ball and Mouse Paddle Game</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -42,18 +42,18 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Javascript Tennis</span>
+                <span>Javascript Ball And Mouse Paddle Game</span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
 
 
         <div class="big-image">
-        <p><img src="images/nicetennis.png" alt="large tennis pic"></p>
+        <p><img src="images/niceballmouse.png" alt="large ballmouse pic"></p>
         </div>
 
 
-<p><a href="https://mroble.github.io/tennis_game/">Play Game</a> | <a href="https://github.com/mroble/tennis_game">Source Code on GitHub</a></p>
+<p><a href="https://mroble.github.io/">Play Game</a> | <a href="https://github.com/mroble/ballmouse">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with "just" JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>. 
@@ -64,7 +64,7 @@
 <p>HTML5, Canvas, JavaScript, Sublime Text, GitHub</p>
 
 <h5>Date Made</h5>
-<p>October 2016</p>
+<p>November 2016</p>
 
 
 
