comment out unfinished racecar

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -90,7 +90,7 @@
         </div>
         </div> -->
 
-        
+
          <div class = "col-sm-6 col-md-3">
           <a href = "tennis.html" class = "thumbnail">
               <img src="images/nicetennissmall.png" alt = "tennis game thumbnail">
@@ -106,12 +106,12 @@
             </a>
         </div>
 
-        <div class = "row">
+       <!-- <div class = "row">
         <div class = "col-sm-6 col-md-3">
             <a href = "racecar.html" class = "thumbnail">
               <img src="images/racecar.jpg" alt = "racecar site thumbnail">
             </a>
-        </div>
+        </div>-->
 
 
 
