correct copy in ballmouse.html file

--- a/ballmouse.html
+++ b/ballmouse.html
@@ -56,7 +56,7 @@
 <p><a href="https://mroble.github.io/ballmouse/">Play Game</a> | <a href="https://github.com/mroble/ballmouse">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>After completing Javascript Tennis, I wanted to take my Javascript and Canvas skills even further. This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/how-to-program-games">Udemy</a>. 
+<p>After completing Javascript Tennis, I wanted to take my Javascript and Canvas skills even further. This game was completed with the help of Chris DeLeon's How To Program Games: Tile Classics tutorial on <a href="https://www.udemy.com/how-to-program-games">Udemy</a>. 
    
 </p>
 
