add ballmouse thumbnail

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -102,7 +102,7 @@
       <div class = "row">
         <div class = "col-sm-6 col-md-3">
             <a href = "ballmouse.html" class = "ball mouse thumbnail">
-              <img src="images/ballmouse.jpg" alt = "ballmouse game thumbnail">
+              <img src="images/niceballmousesmall.png" alt = "ballmouse game thumbnail">
             </a>
         </div>
 
