--- a/racecar.html
+++ b/racecar.html
@@ -53,10 +53,10 @@
         </div>
 
 
-<p><a href="https://mroble.github.io/tennis_game/">Play Game</a> | <a href="https://github.com/mroble/tennis_game">Source Code on GitHub</a></p>
+<p><a href="https://mroble.github.io/racecar/">Play Game</a> | <a href="https://github.com/mroble/racecar">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with "just" JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>. 
+<p>JavaScript Racecar is a continuation of my exploration with Canvas games.  With this game I learned the versatility of using a grid format for game-making in HTML Canvas. This game was completed with the help of Chris DeLeon's How To Program Games: Tile Classics tutorial on <a href="https://www.udemy.com/how-to-program-games/">Udemy</a>. 
    
 </p>
 
@@ -64,7 +64,7 @@
 <p>HTML5, Canvas, JavaScript, Sublime Text, GitHub</p>
 
 <h5>Date Made</h5>
-<p>October 2016</p>
+<p>December 2016</p>
 
 
 
