--- a/racecar.html
+++ b/racecar.html
@@ -49,7 +49,7 @@
 
 
         <div class="big-image">
-        <p><img src="images/nicetennis.png" alt="large tennis pic"></p>
+        <p><img src="images/racecar.png" alt="large racecar pic"></p>
         </div>
 
 
