Fix funky format for thingsimade section

--- a/thingsimade.html
+++ b/thingsimade.html
@@ -83,35 +83,46 @@
       			</a>
    			</div>
 
-       <!--<div class = "col-sm-6 col-md-3">
+     
+
+         <div class = "col-sm-6 col-md-3">
+          <a href = "tennis.html" class = "thumbnail">
+              <img src="images/nicetennissmall.png" alt = "tennis game thumbnail">
+            </a>
+          </div>
+
+
+
+        <div class = "col-sm-6 col-md-3">
+            <a href = "ballmouse.html" class = "ball mouse thumbnail">
+              <img src="images/niceballmousesmall.png" alt = "ballmouse game thumbnail">
+            </a>
+        </div>
+        </div>
+
+  
+        <div class = "row">
+        <div class = "col-sm-6 col-md-3">
+            <a href = "racecar.html" class = "thumbnail">
+              <img src="images/racecarsmall.png" alt = "racecar site thumbnail">
+            </a>
+        </div>
+
+          <div class = "col-sm-6 col-md-3">
+            <a href = "portfolio.html" class = "thumbnail">
+              <img src="images/portfolio.jpg" alt = "portfolio thumbnail">
+            </a>
+        </div>
+
+      </div>
+
+          <!--<div class = "col-sm-6 col-md-3">
             <a href = "basketball.html" class = "thumbnail">
               <img src="images/basketball.jpg" alt = "basketball thumbnail">
             </a>
         </div>
         </div> -->
 
-
-         <div class = "col-sm-6 col-md-3">
-          <a href = "tennis.html" class = "thumbnail">
-              <img src="images/nicetennissmall.png" alt = "tennis game thumbnail">
-            </a>
-              
-        </div>
-
-
-      <div class = "row">
-        <div class = "col-sm-6 col-md-3">
-            <a href = "ballmouse.html" class = "ball mouse thumbnail">
-              <img src="images/niceballmousesmall.png" alt = "ballmouse game thumbnail">
-            </a>
-        </div>
-
-       <div class = "row">
-        <div class = "col-sm-6 col-md-3">
-            <a href = "racecar.html" class = "thumbnail">
-              <img src="images/racecar.jpg" alt = "racecar site thumbnail">
-            </a>
-        </div>
 
 
 
@@ -120,16 +131,10 @@
             <a href = "codeguts.html" class = "thumbnail">
               <img src="images/codeguts.jpg" alt = "codeguts site thumbnail">
             </a>
+        </div>
         </div> -->
 
 
-   			<div class = "col-sm-6 col-md-3">
-      			<a href = "portfolio.html" class = "thumbnail">
-         			<img src="images/portfolio.jpg" alt = "portfolio thumbnail">
-      			</a>
-  		 	</div>
-
-  		</div>
 
         <div class="links">
             <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
