--- a/racecar.html
+++ b/racecar.html
@@ -42,7 +42,7 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Javascript Tennis</span>
+                <span>Javascript Racecar</span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
