Add link to Kalipay from thingsimade page

--- a/kalipay.html
+++ b/kalipay.html
@@ -52,7 +52,7 @@
         <p><img src="images/largemelo.png" alt="large melo pic"></p>
         </div>
 
-        <p><a href="https://mroble.github.io/melotheumangboy">Play Game</a> | <a href="https://github.com/mroble/kalipay">Source Code on GitHub</a></p>
+        <p><a href="https://mroble.github.io/kalipay">Play Game</a> | <a href="https://github.com/mroble/kalipay">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
@@ -65,7 +65,7 @@
 <p>HTML Canvas, Phaser, Javascript, AffinityPhoto (graphics editing), GitHub</p>
 
 <h5>Date Made</h5>
-<p>September 2016</p>
+<p>In-Progress</p>
 
 
 
