--- a/thingsimade.html
+++ b/thingsimade.html
@@ -76,6 +76,15 @@
    			</div>
 
 
+          <div class = "col-sm-6 col-md-3">
+            <a href = "kalipay.html" class = "thumbnail">
+              <img src="images/#" alt = "Kalipay thumbnail">
+            </a>
+        </div>
+
+      </div>
+
+
 
    			<div class = "col-sm-6 col-md-3">
       			<a href = "rollerball.html" class = "thumbnail">
