--- a/kalipay.html
+++ b/kalipay.html
@@ -34,8 +34,8 @@
 	<link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -43,7 +43,7 @@
 <div class="type-wrap">
             <div id="typed-strings">
                 <span>Melo The Umang Boy</span>
-                <p>A Collaboration With Sari-Sari Storybooks</p> 
+                <p>A Collaboration With Sari-Sari Storybooks</p>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
@@ -70,8 +70,7 @@
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
