--- a/melo.html
+++ b/melo.html
@@ -34,8 +34,8 @@
 	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -43,7 +43,7 @@
 <div class="type-wrap">
             <div id="typed-strings">
                 <span>Melo The Umang Boy</span>
-                <p>A Collaboration With Sari-Sari Storybooks</p> 
+                <p>A Collaboration With Sari-Sari Storybooks</p>
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
@@ -52,7 +52,7 @@
         <p><img src="images/largemelo.png" alt="large melo pic"></p>
         </div>
 
-        <p><a href="https://mroble.github.io/melotheumangboy">Play Game</a> | <a href="https://github.com/mroble/melocode">Source Code on GitHub</a></p>
+        <p><a href="https://mroble.github.io/melotheumangboy">Play Unity Game</a> | <a href="some link">Play Phaser Game</a> | <a href="https://github.com/mroble/melocode">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
@@ -68,8 +68,7 @@
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
