--- a/racecar.html
+++ b/racecar.html
@@ -34,8 +34,8 @@
 	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -56,8 +56,8 @@
 <p><a href="https://mroble.github.io/racecar/">Play Game</a> | <a href="https://github.com/mroble/racecar">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>JavaScript Racecar is a continuation of my exploration with Canvas games.  With this game I learned the versatility of using a grid format for game-making in HTML Canvas. This game was completed with the help of Chris DeLeon's How To Program Games: Tile Classics tutorial on <a href="https://www.udemy.com/how-to-program-games/">Udemy</a>. 
-   
+<p>JavaScript Racecar is a continuation of my exploration with Canvas games.  With this game I learned the versatility of using a grid format for game-making in HTML Canvas. This game was completed with the help of Chris DeLeon's How To Program Games: Tile Classics tutorial on <a href="https://www.udemy.com/how-to-program-games/">Udemy</a>.
+
 </p>
 
 <h5>Technologies Used</h5>
@@ -69,8 +69,7 @@
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
