--- a/sayhello.html
+++ b/sayhello.html
@@ -37,7 +37,7 @@
 
     <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -47,7 +47,7 @@
 
  <div class="type-wrap">
             <div id="typed-strings">
-                <span>Say hello!</span> 
+                <span>Say hello!</span>
             </div>
 
 
@@ -66,8 +66,7 @@
 
 
      <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="#">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="#">E-mail</a>
         </div>
         </div>
 </body>
