--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
 	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -43,7 +43,7 @@
 <div class="type-wrap">
             <div id="typed-strings">
                 <span>My 2015 Portfolio</span>
-               
+
             </div>
             <span id="typed" style="white-space:pre;"></span>
         </div>
@@ -56,7 +56,7 @@
 
 <h5>Description</h5>
 <p>
-This was my first attempt at making a "modern" (read: post-1999) web-site. It was made by hand with the help of lots of tutorials, too many to name here.    
+This was my first attempt at making a "modern" (read: post-1999) web-site. It was made by hand with the help of lots of tutorials, too many to name here.
 </p>
 
 <h5>Technologies Used</h5>
@@ -68,8 +68,7 @@ This was my first attempt at making a "modern" (read: post-1999) web-site. It wa
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
