delete more links

--- a/basketball.html
+++ b/basketball.html
@@ -34,8 +34,8 @@
 	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -52,7 +52,7 @@
 
 <h5>Description</h5>
 <p>VR Basketball came about through a desire to explore VR gaming.  In this game, one must shoot multiple basketballs into the hoops, with the furthest hoops garnering the most points. This was the first game I made that was Oculus Rift-compatible, and was made with the help of the <i>Make Virtual Reality Games in Unity</i> course on <a href="https://www.udemy.com/vrcourse/">Udemy.</a>
-   
+
 </p>
 
 <h5>Technologies Used</h5>
@@ -66,8 +66,7 @@
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
