--- a/tennis.html
+++ b/tennis.html
@@ -34,8 +34,8 @@
 	   <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-	
-    
+
+
 </head>
 <body>
 <div class="wrap">
@@ -56,8 +56,8 @@
 <p><a href="https://mroble.github.io/tennis_game/">Play Game</a> | <a href="https://github.com/mroble/tennis_game">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
-<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with "just" JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>. 
-   
+<p>JavaScript Tennis came about through a desire to explore HTML5's Canvas.  I'd become accustomed to using powerful game englines like Unity3d, and I wanted to see what could be done with "just" JavaScript and the browser.  This game was completed with the help of Chris DeLeon's Javascript Tennis game tutorial on <a href="https://www.udemy.com/code-your-first-game/">Udemy</a>.
+
 </p>
 
 <h5>Technologies Used</h5>
@@ -69,8 +69,7 @@
 
 
     <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
 
 
