add big kalipay pic

--- a/kalipay.html
+++ b/kalipay.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="big-image">
-        <p><img src="images/largemelo.png" alt="large melo pic"></p>
+        <p><img src="images/kalipaymain.png" alt="large kalipay pic"></p>
         </div>
 
         <p><a href="https://mroble.github.io/kalipay">Play Game</a> | <a href="https://github.com/mroble/kalipay">Source Code on GitHub</a></p>
