--- a/thingsimade.html
+++ b/thingsimade.html
@@ -68,6 +68,12 @@
 
         <div class = "row">
 
+          <div class = "col-sm-6 col-md-3">
+          <a href = "colorgame.html" class = "thumbnail">
+              <img src="images/colorgame.png" alt = "color game thumbnail">
+          </a>
+          </div>
+
    			<div class = "col-sm-6 col-md-3">
    				<a href = "melo.html" class = "thumbnail">
          			<img src="images/melo.jpg" alt = "melo thumbnail">
@@ -86,17 +92,16 @@
          			<img src="images/rollerball.jpg" alt = "rollerball thumbnail">
       			</a>
    			</div>
+        </div>
 
-         <div class = "col-sm-6 col-md-3">
+
+        <div class = "row">
+          <div class = "col-sm-6 col-md-3">
           <a href = "tennis.html" class = "thumbnail">
               <img src="images/nicetennissmall.png" alt = "tennis game thumbnail">
             </a>
           </div>
 
-        </div>
-
-
-        <div class = "row">
           <div class = "col-sm-6 col-md-3">
             <a href = "ballmouse.html" class = "thumbnail">
               <img src="images/niceballmousesmall.png" alt = "ballmouse game thumbnail">
