add big thumbnail and edit description

--- a/colorgame.html
+++ b/colorgame.html
@@ -49,18 +49,18 @@
         </div>
 
         <div class="big-image">
-        <p><img src="images/largemelo.png" alt="large melo pic"></p>
+        <p><img src="images/colorgamebig.png" alt="large color game pic"></p>
         </div>
 
         <p><a href="https://mroble.github.io/color-game">Play Game</a> | <a href="https://github.com/mroble/color-game">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
-    <i>Melo The Umang Boy</i> is a 2D platformer video game collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. While the outward purpose of the game is to reinforce Ivatan vocabulary words covered in the book, the hidden purpose of the game is to help make learning about Filipino culture fun. In order to make the game as accessible to as many children as possible, we made the decision to make this a web game.
+    I made this game in Colt Steele's Web Developer Bootcamp on Udemy. It was a great exercise in using event listeners, keeping the code as DRY as possible, DOM manipulation, and CSS. Great fun!
 </p>
 
 <h5>Technologies Used</h5>
-<p>Google Chrome Console, Sublime Text, Terminal, JavaScript.
+<p>Google Chrome Console, Sublime Text, Terminal, JavaScript, HTML, CSS.
 
 <h5>Date Made</h5>
 <p>August 2017</p>
